<resources>
    <string name="app_name">心理咨询</string>
    <string name="action_settings">Settings</string>
    <string name="splash_icon_description">Splash Icon</string> <!-- 闪屏图标的描述，用于辅助功能 -->
    <string name="arc_text">欢迎来到这里</string> <!-- 第二个闪屏底部显示的文字 -->
    <string name="login_image_description">Login Image</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_button_text">登陆</string>
    <string name="register_button_text">注册</string>
    <string name="phone_login_text">手机短信登陆</string>
    <string name="username_label">账户:</string>
    <string name="password_label">密码:</string>
</resources>